--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -25,6 +25,7 @@
         "message": "You can only call the error(), warn() and info() methods from the console object"
       }
     ],
+    "linebreak-style": ["error", "unix"],
     "react/react-in-jsx-scope": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/no-unescaped-entities": "off",
