--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,7 +24,7 @@
       "error",
       { "endOfLine": "auto" }
     ],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "no-console": "off",
     "no-restricted-syntax": [
       "error",
