--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
 
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
 
     "react-spring": "^9.7.3"
 
