--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy" : "http://localhost:4000" 
   },
   "dependencies": {
     "prop-types": "^15.8.1",
