--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,14 @@
     "proxy": "http://localhost:4000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@ramonak/react-progress-bar": "^5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
